<resources>
    <string name="app_name">Npad &#945;</string>

    <string name="editor_action_file_menu">File</string>
    <string name="editor_action_new">New</string>
    <string name="editor_action_open">Open&#8230;</string>
    <string name="editor_action_saveAs">Save As&#8230;</string>
    <string name="editor_action_save">Save</string>
    <string name="editor_action_setting">Settings</string>
    <string name="editor_action_photoMode">Photo mode</string>
    <string name="editor_action_undo">Undo</string>
    <string name="editor_action_redo">Redo</string>

    <string name="text_styling_bold">Bold</string>
    <string name="text_styling_italic">Italic</string>
    <string name="text_styling_underline">Underline</string>


    <string name="save_dialog_msg">Save changes to document before closing?</string>

    <string name="dialog_msg_incompatible_document_type"> is not a compatible document type.</string>

    <string name="toast_msg_photo_mode_instruction">Tap and hold to exit</string>

    <string name="dialog_msg_exi_photo_mode">Exit Photo Mode?</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_key_internal_wallpaper_name">internal_wallpaper_name</string>

    <string name="pref_category_general_name">Editor</string>

    <string name="pref_title_font_size">Font size</string>
    <string name="pref_key_font_size">font_size</string>
    <string-array name="pref_font_size_titles">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>
    <string-array name="pref_font_size_values">
        <item>14</item>
        <item>16</item>
        <item>20</item>
        <item>28</item>
    </string-array>
    <string name="pref_default_font_size">16</string>

    <string name="pref_category_wallpaper_name">Wallpaper</string>

    <string name="pref_title_pick_wallpaper">Pick Wallpaper</string>
    <string name="pref_key_pick_wallpaper">pick_wallpaper</string>

    <string name="pref_title_clear_wallpaper">Clear Wallpaper</string>
    <string name="pref_key_clear_wallpaper">clear_wallpaper</string>

    <string name="pref_title_dimmer_intensity">Wallpaper dimmer</string>
    <string name="pref_key_dimmer_intensity">dimmer_intensity</string>
    <string name="dimmer_off">off</string>
    <string name="dimmer_subtle">subtle</string>
    <string name="dimmer_moderate">moderate</string>
    <string name="dimmer_intense">intense</string>
    <string-array name="pref_dimmer_intensity_titles">
        <item>Off</item>
        <item>Subtle</item>
        <item>Moderate</item>
        <item>Intense</item>
    </string-array>
    <string-array name="pref_dimmer_intensity_values">
        <item>@string/dimmer_off</item>
        <item>@string/dimmer_subtle</item>
        <item>@string/dimmer_moderate</item>
        <item>@string/dimmer_intense</item>
    </string-array>
    <string name="pref_default_shade_intensity">@string/dimmer_subtle</string>

    <string name="pref_title_scaling">Scaling</string>
    <string name="pref_key_scaling">wallpaper_scaling</string>
    <string name="to_width">width</string>
    <string name="to_height">height</string>
    <string name="stretch">stretch</string>
    <string-array name="pref_scaling_titles">
        <item>Fit</item>
        <item>Fill</item>
        <item>Stretch</item>
    </string-array>
    <string-array name="pref_scaling_values">
        <item>@string/to_width</item>
        <item>@string/to_height</item>
        <item>@string/stretch</item>
    </string-array>
    <string name="pref_default_scaling">@string/to_height</string>
    <string name="pref_key_draw_default_background">draw_default_background</string>
    <bool name="pref_default_draw_default_background">false</bool>


    <!-- Custom Views -->

    <string name="preference_clearable_btn_text">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
