<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/pref_category_general_name">
        <ListPreference
            app:defaultValue="@string/pref_default_font_size"
            app:entries="@array/pref_font_size_titles"
            app:entryValues="@array/pref_font_size_values"
            app:key="@string/pref_key_font_size"
            app:title="@string/pref_title_font_size"
            app:icon="@drawable/ic_action_fontsize"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_category_wallpaper_name">
        <Preference
            app:key="@string/pref_key_pick_wallpaper"
            app:title="@string/pref_title_pick_wallpaper"
            app:icon="@drawable/ic_action_wallpaper"/>
        <Preference
            app:key="@string/pref_key_clear_wallpaper"
            app:title="@string/pref_title_clear_wallpaper"
            app:icon="@drawable/ic_action_wallpaper_clear"/>
        <androidx.preference.SeekBarPreference
            app:defaultValue="@integer/pref_default_shade_intensity"
            app:key="@string/pref_key_dimmer_intensity"
            app:min="@integer/pref_shade_intensity_min"
            android:max="@integer/pref_shade_intensity_max"
            app:title="@string/pref_title_dimmer_intensity"
            app:icon="@drawable/ic_action_wallpaper_dimmer"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"
            />
        <ListPreference
            app:defaultValue="@string/pref_default_scaling"
            app:entries="@array/pref_scaling_titles"
            app:entryValues="@array/pref_scaling_values"
            app:key="@string/pref_key_scaling"
            app:title="@string/pref_title_scaling"
            app:icon="@drawable/ic_action_wallpaper_scaling"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
